# common_source_project-fm7

./: .dir-locals.el  .gitignore  000_gitlog.txt  00_gitlog.txt  ABOUT_eFM7_1.txt  ChangeLog  FAQ.html  FAQ.ja.html  INSTALL.en.md  INSTALL.md  README  README.en.md  README.md  RELEASENOTE.txt  ToDo.ja.txt  Wav2T88.txt  history.txt  readme.qt.txt  readme.txt  readme_by_artane.txt  readme_by_mr_tanam.txt  readme_fm7.jp.txt  readme_fm7.txt  revision.txt
source/build-cmake/babbage2nd/: CMakeLists.txt
source/build-cmake/familybasic/: CMakeLists.txt
source/build-cmake/fm16pi/: CMakeLists.txt
source/build-cmake/fm7/: CMakeLists.txt
source/build-cmake/fm77/: CMakeLists.txt
source/build-cmake/fmr70/: CMakeLists.txt
source/build-cmake/fmr80/: CMakeLists.txt
source/build-cmake/fp1100/: CMakeLists.txt
source/build-cmake/fp200/: CMakeLists.txt
source/build-cmake/gamegear/: CMakeLists.txt
source/build-cmake/hc20/: CMakeLists.txt
source/build-cmake/hc40/: CMakeLists.txt
source/build-cmake/hc80/: CMakeLists.txt
source/build-cmake/j3100gt/: CMakeLists.txt
source/build-cmake/jr100/: CMakeLists.txt
source/build-cmake/jx/: CMakeLists.txt
source/build-cmake/libCSPavio/: CMakeLists.txt
source/build-cmake/libCSPcommon_vm/: CMakeLists.txt
source/build-cmake/libCSPemu_utils/: CMakeLists.txt
source/build-cmake/libCSPfmgen/: CMakeLists.txt
source/build-cmake/libCSPosd/: CMakeLists.txt
source/build-cmake/m5/: CMakeLists.txt
source/build-cmake/map1010/: CMakeLists.txt
source/build-cmake/mastersystem/: CMakeLists.txt
source/build-cmake/msx1/: CMakeLists.txt
source/build-cmake/msx2/: CMakeLists.txt
source/build-cmake/multi8/: CMakeLists.txt
source/build-cmake/mycomz80a/: CMakeLists.txt
source/build-cmake/mz1200/: CMakeLists.txt
source/src/: 000_rejs.lst  CMakeLists.txt  common.cpp  common.h  common_gcc.h  common_msc.h  config.cpp  config.h  config_dll.cpp  debugger.cpp  emu.cpp  emu.h  emu_template.h  fifo.cpp  fifo.h  fifo_templates.h  fileio.cpp  fileio.h  osdcall_types.h  ringbuffer.cpp  ringbuffer.h  romakana.cpp  romakana.h  state_data.h  statesub.cpp  statesub.h  win32_debugger.cpp  win32_direct_show.cpp  win32_input.cpp  win32_screen.cpp  win32_socket.cpp  win32_sound.cpp  winmain.cpp
source/src/agar/common/: CMakeLists.txt  agar_debugger.cpp  agar_draw.h  agar_emuevents.cpp  agar_emuevents.h  agar_glcl.cpp  agar_glcl.h  agar_gldraw.h  agar_gldraw2.cpp  agar_glutil.cpp  agar_glutil.h  agar_input.cpp  agar_input.h  agar_logger.h  agar_main.cpp  agar_main.h  agar_screen.cpp  agar_sdlscaler.cpp  agar_sdlview.c  agar_sdlview.h  agar_wrapper.cpp  api_vram.h  cache_wrapper.h  sdl_cpuid.c  sdl_cpuid.h  sdl_sound.cpp  simd_types.h
source/src/agar/fm7/: CMakeLists.txt
source/src/agar/menu/: CMakeLists.txt  agar_menu.cpp  menu_common.h  menu_disk.cpp  menu_screen.cpp  menu_sound.cpp
source/src/agar/pc8801ma/: CMakeLists.txt  menu_pc88ma.cpp
source/src/agar/tools/: cl2cpp.awk
source/src/agar/ui/: CMakeLists.txt  agar_dialogs.cpp
source/src/agar/x1/: CMakeLists.txt  menu_x1.cpp
source/src/agar/x1turbo/: CMakeLists.txt
source/src/agar/x1turboz/: menu_x1t.cpp
source/src/qt/: CMakeLists.txt  config_utils.cpp  config_utils.h  osd.cpp  osd.h  osd_base.cpp  osd_base.h  osd_console.cpp  osd_input.cpp  osd_midi.cpp  osd_printer.cpp  osd_screen.cpp  osd_socket.cpp  osd_socket.h  osd_sound.cpp  osd_sound_mod_qtmultimedia.cpp  osd_sound_mod_qtmultimedia.h  osd_sound_mod_sdl2.cpp  osd_sound_mod_template.cpp  osd_sound_mod_template.h  osd_sound_mod_utils.h  osd_types.h  osd_video.cpp  osd_wrapper.cpp  pch.cpp  pch_list  pch_preprocess.sh  qtcpsocket2.cpp  qudpsocket2.cpp  sound_buffer_qt.cpp  sound_buffer_qt.h
source/src/qt/avio/: CMakeLists.txt  avio_ffmpeg.h  csp_avio_basic.h  movie_loader.cpp  movie_loader.h  movie_saver.cpp  movie_saver.h  movie_saver_audio.cpp  movie_saver_fileio.cpp  movie_saver_video.cpp  sound_loader.cpp  sound_loader.h
source/src/qt/babbage2nd/: CMakeLists.txt  MainWindow.cpp
source/src/qt/bmjr/: MainWindow.cpp
source/src/qt/common/: CMakeLists.txt  agar_logger.cpp  agar_logger.h  cache_wrapper.h  chromakey_fragment_shader.glsl  common.ja_JP.ts  csp_qt_common.ts  draw_thread.cpp  draw_thread.h  dropdown_jspage.cpp  emu_input.cpp  emu_thread.cpp  emu_thread.h  emu_thread_slots.cpp  emu_utils.cpp  emu_utils.h  emuevents_control.cpp  filtered_fragment_shader.glsl  fragment_shader.glsl  grids_fragment_shader.glsl  grids_vertex_shader.glsl  joy_thread.cpp  joy_thread.h  main.cpp  mainwidget.cpp  mainwidget.h  menu_flags.cpp  menu_flags.h  pch_list  (+34 more)
source/src/res/: afxres.h  babbage2nd.rc  bmjr.rc  bubcom80.rc  bx1.rc  cefucom21.rc  colecovision.rc  crc80.rc  credits.html  ex80.rc  ex80bs.rc  familybasic.rc  fm16beta.rc  fm16pi.rc  fm7.aps  fm7.rc  fm77.rc  fm77av.rc  fm77av40.rc  fm77av40ex.rc  fm77l4.rc  fm8.rc  fmr30.rc  fmr50_i286.rc  fmr50_i386.rc  fmr50_i486.rc  fmr60.rc  fmr70.rc  fmr80.rc  fp1100.rc  fp200.rc  fsa1.rc  fx9000p.rc  gamegear.rc  hc20.rc  hc40.rc  hc80.rc  hx20.rc  icon.txt  j3100.rc  (+93 more)
source/src/types/: basic_types.h  optimizer_utils.h  pair16_t.h  pair32_t.h  pair64_t.h  scrntype_t.h  simd.h  sound_types.h  system_dep.h  system_endians.h  types_video.h  util_configwrapper.h  util_disasm.h  util_endians.h  util_sound.h  util_strings.h  util_system.h  util_video.h
source/src/vm/: 315-5124.cpp  315-5124.h  CMakeLists.txt  am9511.cpp  am9511.h  and.cpp  and.h  ay_3_891x.cpp  ay_3_891x.h  beep.cpp  beep.h  datarec.cpp  datarec.h  debugger.h  device.cpp  device.h  device_params.h  disk.cpp  disk.h  dummydevice.cpp  dummydevice.h  event.cpp  event.h  event_template.h  f9368.h  harddisk.cpp  harddisk.h  hd146818p.cpp  hd146818p.h  hd44102.cpp  hd44102.h  hd46505.cpp  hd46505.h  hd6301.cpp  hd6301.h  hd63484.cpp  hd63484.h  huc6280.cpp  huc6280.h  huc6280_base.cpp  (+209 more)
source/src/win32/: osd.cpp  osd.h  osd_console.cpp  osd_input.cpp  osd_midi.cpp  osd_printer.cpp  osd_screen.cpp  osd_socket.cpp  osd_sound.cpp  osd_video.cpp  winmain.cpp
source/src/winplugin/: dllmain.cpp  dllmain.h  emuwrap.cpp  emuwrap.h
(+3922 files in other folders)
